# rust-read-manga

./: .env.example  .gitignore  Makefile  README.md  config.toml  docker-compose.yml  rust-read-manga-structure.md  rust-read-manga.md  test.toml
docs/: DURATION_ENGINE.md  FEATURES.md  NODES.md  SAVE_STEPS_POSTGRES.md  WORKFLOW.md
docs/nodes/: 00-Input-Nodes.md  01-Image-Nodes.md  02-Text-Nodes.md  03-Timing-Nodes.md  04-Video-Nodes.md  05-Output-Nodes.md  06-Logic-Nodes.md  07-Utility-Nodes.md
init/: init.sql
service/: Dockerfile
service/rust-read-manga/: Cargo.toml
service/rust-read-manga/src/: cli.rs  converter.rs  error.rs  lib.rs  main.rs
service/rust-read-manga/src/batch/: mod.rs  processor.rs
service/rust-read-manga/src/cli/: commands.rs  mod.rs
service/rust-read-manga/src/config/: loader.rs  models.rs
service/rust-read-manga/src/database/: client.rs
service/rust-read-manga/src/duration/: calculator.rs  engine.rs  formula.rs  mod.rs
service/rust-read-manga/src/images/: mod.rs  preprocess.rs  transitions.rs
service/rust-read-manga/src/input/: mod.rs  scanner.rs  sorting.rs
service/rust-read-manga/src/ocr/: analysis.rs  engine.rs  mod.rs
service/rust-read-manga/src/plugins/: api.rs  loader.rs  mod.rs
service/rust-read-manga/src/scripting/: engine.rs  mod.rs
service/rust-read-manga/src/utils/: errors.rs  logging.rs  mod.rs  paths.rs
service/rust-read-manga/src/video/: encoder.rs  mod.rs  timeline.rs  writer.rs
service/rust-read-manga/src/workflow/: context.rs  engine.rs  mod.rs  models.rs  node_type.rs  parser.rs  runner.rs  templating.rs
service/rust-read-manga/tests/: cli_test.rs  test_workflow.toml  workflow_test.rs
