[package]
name = "rust-read-manga"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
ffmpeg-sidecar = "0.2.0"
glob = "0.3.1"
image = "0.24.7"
log = "0.4.20"
regex = "1.10.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ordered_map = "0.1.0"
strum = "0.25.0"
strum_macros = "0.25.0"
tempfile = "3.8.1"
tesseract = "0.10.0"
thiserror = "1.0.49"
toml = "0.8.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.8"
async-trait = "0.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[features]
default = ["video-encoding", "image-processing", "parallel-processing"]
video-encoding = []
image-processing = []
parallel-processing = []
all = ["video-encoding", "image-processing", "parallel-processing"]
