[package]
name = "rust-read-manga"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
ffmpeg-sidecar = "2.3.0"
glob = "0.3.1"
image = "0.25.9"
log = "0.4.16"
regex = "1.10.2"

serde = { version = "1.0.228", features = ["derive"] }
indexmap = { version = "2.12.0", features = ["serde"] }
serde_json = "1.0"
serde_with = "3.4.0"

strum = "0.27.2"
strum_macros = "0.27.2"
tempfile = "3.8.1"
tesseract = "0.15.2"
thiserror = "2.0.17"
toml = "0.9.8"
tokio = { version = "1", features = ["full"] }

async-trait = "0.1.80"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rhai = "1.23.6"
libloading = "0.9.0"
walkdir = "2.5.0"
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1", "with-uuid-1"] }

[features]
default = ["video-encoding", "image-processing", "parallel-processing"]
video-encoding = []
image-processing = []
parallel-processing = []
all = ["video-encoding", "image-processing", "parallel-processing"]
